--- a/data_harmonization_zh_nli.ipynb
+++ b/data_harmonization_zh_nli.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\program_code\\zeroshot-classifier\\venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "## load packages\n",
     "import pandas as pd\n",
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -118,6 +127,79 @@
    ],
    "source": [
     "dataset_zh_nli"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading readme: 100%|██████████| 527/527 [00:00<?, ?B/s] \n",
+      "Downloading data: 100%|██████████| 84.6k/84.6k [00:00<00:00, 127kB/s]\n",
+      "Downloading data files: 100%|██████████| 1/1 [00:00<00:00,  1.48it/s]\n",
+      "Extracting data files: 100%|██████████| 1/1 [00:00<00:00, 181.41it/s]\n",
+      "Generating train split: 100%|██████████| 1441/1441 [00:00<00:00, 57888.76 examples/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = load_dataset('asadfgglie/BanBan_2024-10-17-facial_expressions')['train']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template = '這是一句會使用{}表情說出來的話。'\n",
+    "def convert():\n",
+    "    for ex in dataset:\n",
+    "        for entail_label in ex['candidate_labels']:\n",
+    "            yield {\n",
+    "                'premise': ex['sequences'],\n",
+    "                'hypothesis': template.format(entail_label),\n",
+    "                'label': 0\n",
+    "            }\n",
+    "        for not_entail_label in ex['not_candidate_labels']:\n",
+    "            yield {\n",
+    "                'premise': ex['sequences'],\n",
+    "                'hypothesis': template.format(not_entail_label),\n",
+    "                'label': 1\n",
+    "            }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = load_dataset('asadfgglie/nli-zh-tw-all')['train'].features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating train split: 4726 examples [00:00, 25284.49 examples/s]\n",
+      "Creating parquet from Arrow format: 100%|██████████| 5/5 [00:00<00:00, 1630.50ba/s]\n",
+      "Pushing dataset shards to the dataset hub: 100%|██████████| 1/1 [00:02<00:00,  2.63s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nli = Dataset.from_generator(convert, features)\n",
+    "nli.push_to_hub('asadfgglie/BanBan_2024-10-17-facial_expressions-nli')"
    ]
   }
  ],
